--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Wide coverage location</h1>
             <p>Shared rides, There’s lots to do in your city, and we’ve got the rides to help you enjoy it all. And they’re all available right from your app.</p>
             <button class="button-learn-more">Learn more</button>
-            <a class="link-learn-more">learn-more</a>
+            <a class="link-learn-more">learn more</a>
         </div>
 
     </main>
